pl_antlr/ANTLRDescendente/src/practicaAntlrParser.java
// Generated from .\practicaAntlr.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class practicaAntlrParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, Cmp=12, Eventos=13, ID=14, COD=15, ALM=16, WS=17, COMMENT=18, 
		NUM=19, LINE_COMMENT=20, Llaves_ab=21, Llaves_ce=22;
	public static final int
		RULE_programa = 0, RULE_dec_comp = 1, RULE_automata = 2, RULE_cuerpo_automata = 3, 
		RULE_estados = 4, RULE_estado_ini = 5, RULE_alf_in = 6, RULE_alf_out = 7, 
		RULE_transicion = 8, RULE_transicion_def = 9, RULE_val_trans = 10, RULE_comportamientos = 11, 
		RULE_comp_def = 12, RULE_val_comp = 13;
	public static final String[] ruleNames = {
		"programa", "dec_comp", "automata", "cuerpo_automata", "estados", "estado_ini", 
		"alf_in", "alf_out", "transicion", "transicion_def", "val_trans", "comportamientos", 
		"comp_def", "val_comp"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'moore'", "'estados'", "','", "';'", "'estado_in'", "'alf_in'", 
		"'alf_out'", "'transicion'", "'('", "')'", "'comportamiento'", null, null, 
		null, null, "'#'", null, null, null, null, "'{'", "'}'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"Cmp", "Eventos", "ID", "COD", "ALM", "WS", "COMMENT", "NUM", "LINE_COMMENT", 
		"Llaves_ab", "Llaves_ce"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "practicaAntlr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public practicaAntlrParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramaContext extends ParserRuleContext {
		public Dec_compContext dec_comp() {
			return getRuleContext(Dec_compContext.class,0);
		}
		public List<AutomataContext> automata() {
			return getRuleContexts(AutomataContext.class);
		}
		public AutomataContext automata(int i) {
			return getRuleContext(AutomataContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof practicaAntlrListener ) ((practicaAntlrListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof practicaAntlrListener ) ((practicaAntlrListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			dec_comp();
			setState(29);
			automata();
			setState(33);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(30);
				automata();
				}
				}
				setState(35);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dec_compContext extends ParserRuleContext {
		public List<TerminalNode> Cmp() { return getTokens(practicaAntlrParser.Cmp); }
		public TerminalNode Cmp(int i) {
			return getToken(practicaAntlrParser.Cmp, i);
		}
		public List<TerminalNode> COD() { return getTokens(practicaAntlrParser.COD); }
		public TerminalNode COD(int i) {
			return getToken(practicaAntlrParser.COD, i);
		}
		public Dec_compContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec_comp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof practicaAntlrListener ) ((practicaAntlrListener)listener).enterDec_comp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof practicaAntlrListener ) ((practicaAntlrListener)listener).exitDec_comp(this);
		}
	}

	public final Dec_compContext dec_comp() throws RecognitionException {
		Dec_compContext _localctx = new Dec_compContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_dec_comp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			match(Cmp);
			setState(37);
			match(COD);
			setState(42);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Cmp) {
				{
				{
				setState(38);
				match(Cmp);
				setState(39);
				match(COD);
				}
				}
				setState(44);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AutomataContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(practicaAntlrParser.ID, 0); }
		public Cuerpo_automataContext cuerpo_automata() {
			return getRuleContext(Cuerpo_automataContext.class,0);
		}
		public AutomataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_automata; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof practicaAntlrListener ) ((practicaAntlrListener)listener).enterAutomata(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof practicaAntlrListener ) ((practicaAntlrListener)listener).exitAutomata(this);
		}
	}

	public final AutomataContext automata() throws RecognitionException {
		AutomataContext _localctx = new AutomataContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_automata);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			match(T__0);
			setState(46);
			match(ID);
			setState(47);
			cuerpo_automata();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cuerpo_automataContext extends ParserRuleContext {
		public TerminalNode Llaves_ab() { return getToken(practicaAntlrParser.Llaves_ab, 0); }
		public EstadosContext estados() {
			return getRuleContext(EstadosContext.class,0);
		}
		public Estado_iniContext estado_ini() {
			return getRuleContext(Estado_iniContext.class,0);
		}
		public Alf_inContext alf_in() {
			return getRuleContext(Alf_inContext.class,0);
		}
		public Alf_outContext alf_out() {
			return getRuleContext(Alf_outContext.class,0);
		}
		public ComportamientosContext comportamientos() {
			return getRuleContext(ComportamientosContext.class,0);
		}
		public TransicionContext transicion() {
			return getRuleContext(TransicionContext.class,0);
		}
		public TerminalNode Llaves_ce() { return getToken(practicaAntlrParser.Llaves_ce, 0); }
		public Cuerpo_automataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cuerpo_automata; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof practicaAntlrListener ) ((practicaAntlrListener)listener).enterCuerpo_automata(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof practicaAntlrListener ) ((practicaAntlrListener)listener).exitCuerpo_automata(this);
		}
	}

	public final Cuerpo_automataContext cuerpo_automata() throws RecognitionException {
		Cuerpo_automataContext _localctx = new Cuerpo_automataContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cuerpo_automata);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			match(Llaves_ab);
			setState(50);
			estados();
			setState(51);
			estado_ini();
			setState(52);
			alf_in();
			setState(53);
			alf_out();
			setState(54);
			comportamientos();
			setState(55);
			transicion();
			setState(56);
			match(Llaves_ce);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EstadosContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(practicaAntlrParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(practicaAntlrParser.ID, i);
		}
		public EstadosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_estados; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof practicaAntlrListener ) ((practicaAntlrListener)listener).enterEstados(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof practicaAntlrListener ) ((practicaAntlrListener)listener).exitEstados(this);
		}
	}

	public final EstadosContext estados() throws RecognitionException {
		EstadosContext _localctx = new EstadosContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_estados);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(T__1);
			setState(63);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(59);
					match(ID);
					setState(60);
					match(T__2);
					}
					} 
				}
				setState(65);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(66);
			match(ID);
			setState(67);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Estado_iniContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(practicaAntlrParser.ID, 0); }
		public Estado_iniContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_estado_ini; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof practicaAntlrListener ) ((practicaAntlrListener)listener).enterEstado_ini(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof practicaAntlrListener ) ((practicaAntlrListener)listener).exitEstado_ini(this);
		}
	}

	public final Estado_iniContext estado_ini() throws RecognitionException {
		Estado_iniContext _localctx = new Estado_iniContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_estado_ini);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(T__4);
			setState(70);
			match(ID);
			setState(71);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Alf_inContext extends ParserRuleContext {
		public List<TerminalNode> Eventos() { return getTokens(practicaAntlrParser.Eventos); }
		public TerminalNode Eventos(int i) {
			return getToken(practicaAntlrParser.Eventos, i);
		}
		public Alf_inContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alf_in; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof practicaAntlrListener ) ((practicaAntlrListener)listener).enterAlf_in(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof practicaAntlrListener ) ((practicaAntlrListener)listener).exitAlf_in(this);
		}
	}

	public final Alf_inContext alf_in() throws RecognitionException {
		Alf_inContext _localctx = new Alf_inContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_alf_in);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(T__5);
			setState(78);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(74);
					match(Eventos);
					setState(75);
					match(T__2);
					}
					} 
				}
				setState(80);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(81);
			match(Eventos);
			setState(82);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Alf_outContext extends ParserRuleContext {
		public List<TerminalNode> Cmp() { return getTokens(practicaAntlrParser.Cmp); }
		public TerminalNode Cmp(int i) {
			return getToken(practicaAntlrParser.Cmp, i);
		}
		public Alf_outContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alf_out; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof practicaAntlrListener ) ((practicaAntlrListener)listener).enterAlf_out(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof practicaAntlrListener ) ((practicaAntlrListener)listener).exitAlf_out(this);
		}
	}

	public final Alf_outContext alf_out() throws RecognitionException {
		Alf_outContext _localctx = new Alf_outContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_alf_out);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(T__6);
			setState(89);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(85);
					match(Cmp);
					setState(86);
					match(T__2);
					}
					} 
				}
				setState(91);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(92);
			match(Cmp);
			setState(93);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TransicionContext extends ParserRuleContext {
		public TerminalNode Llaves_ab() { return getToken(practicaAntlrParser.Llaves_ab, 0); }
		public List<Transicion_defContext> transicion_def() {
			return getRuleContexts(Transicion_defContext.class);
		}
		public Transicion_defContext transicion_def(int i) {
			return getRuleContext(Transicion_defContext.class,i);
		}
		public TerminalNode Llaves_ce() { return getToken(practicaAntlrParser.Llaves_ce, 0); }
		public TransicionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_transicion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof practicaAntlrListener ) ((practicaAntlrListener)listener).enterTransicion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof practicaAntlrListener ) ((practicaAntlrListener)listener).exitTransicion(this);
		}
	}

	public final TransicionContext transicion() throws RecognitionException {
		TransicionContext _localctx = new TransicionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_transicion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(T__7);
			setState(96);
			match(Llaves_ab);
			setState(97);
			transicion_def();
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__8) {
				{
				{
				setState(98);
				transicion_def();
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(104);
			match(Llaves_ce);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Transicion_defContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(practicaAntlrParser.ID, 0); }
		public TerminalNode Eventos() { return getToken(practicaAntlrParser.Eventos, 0); }
		public Val_transContext val_trans() {
			return getRuleContext(Val_transContext.class,0);
		}
		public Transicion_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_transicion_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof practicaAntlrListener ) ((practicaAntlrListener)listener).enterTransicion_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof practicaAntlrListener ) ((practicaAntlrListener)listener).exitTransicion_def(this);
		}
	}

	public final Transicion_defContext transicion_def() throws RecognitionException {
		Transicion_defContext _localctx = new Transicion_defContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_transicion_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(T__8);
			setState(107);
			match(ID);
			setState(108);
			match(T__2);
			setState(109);
			match(Eventos);
			setState(110);
			match(T__2);
			setState(111);
			val_trans();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Val_transContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(practicaAntlrParser.ID, 0); }
		public Val_transContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_val_trans; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof practicaAntlrListener ) ((practicaAntlrListener)listener).enterVal_trans(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof practicaAntlrListener ) ((practicaAntlrListener)listener).exitVal_trans(this);
		}
	}

	public final Val_transContext val_trans() throws RecognitionException {
		Val_transContext _localctx = new Val_transContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_val_trans);
		try {
			setState(119);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				match(ID);
				setState(114);
				match(T__9);
				setState(115);
				match(T__2);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(116);
				match(ID);
				setState(117);
				match(T__9);
				setState(118);
				match(T__3);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComportamientosContext extends ParserRuleContext {
		public TerminalNode Llaves_ab() { return getToken(practicaAntlrParser.Llaves_ab, 0); }
		public List<Comp_defContext> comp_def() {
			return getRuleContexts(Comp_defContext.class);
		}
		public Comp_defContext comp_def(int i) {
			return getRuleContext(Comp_defContext.class,i);
		}
		public TerminalNode Llaves_ce() { return getToken(practicaAntlrParser.Llaves_ce, 0); }
		public ComportamientosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comportamientos; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof practicaAntlrListener ) ((practicaAntlrListener)listener).enterComportamientos(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof practicaAntlrListener ) ((practicaAntlrListener)listener).exitComportamientos(this);
		}
	}

	public final ComportamientosContext comportamientos() throws RecognitionException {
		ComportamientosContext _localctx = new ComportamientosContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_comportamientos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(T__10);
			setState(122);
			match(Llaves_ab);
			setState(123);
			comp_def();
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__8) {
				{
				{
				setState(124);
				comp_def();
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(130);
			match(Llaves_ce);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Comp_defContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(practicaAntlrParser.ID, 0); }
		public Val_compContext val_comp() {
			return getRuleContext(Val_compContext.class,0);
		}
		public Comp_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comp_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof practicaAntlrListener ) ((practicaAntlrListener)listener).enterComp_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof practicaAntlrListener ) ((practicaAntlrListener)listener).exitComp_def(this);
		}
	}

	public final Comp_defContext comp_def() throws RecognitionException {
		Comp_defContext _localctx = new Comp_defContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_comp_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(T__8);
			setState(133);
			match(ID);
			setState(134);
			match(T__2);
			setState(135);
			val_comp();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Val_compContext extends ParserRuleContext {
		public TerminalNode Cmp() { return getToken(practicaAntlrParser.Cmp, 0); }
		public Val_compContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_val_comp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof practicaAntlrListener ) ((practicaAntlrListener)listener).enterVal_comp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof practicaAntlrListener ) ((practicaAntlrListener)listener).exitVal_comp(this);
		}
	}

	public final Val_compContext val_comp() throws RecognitionException {
		Val_compContext _localctx = new Val_compContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_val_comp);
		try {
			setState(143);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				match(Cmp);
				setState(138);
				match(T__9);
				setState(139);
				match(T__2);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(140);
				match(Cmp);
				setState(141);
				match(T__9);
				setState(142);
				match(T__3);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}